# obc-project

./: .gitmodules  CMakeLists.txt  README.md  settings.ini
MyDeployment/: CMakeLists.txt  Main.cpp  README.md
MyDeployment/Top/: CMakeLists.txt  MyDeploymentPackets.fppi  MyDeploymentTopology.cpp  MyDeploymentTopology.hpp  MyDeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
ObcProject/: CMakeLists.txt
ObcProject/Components/: CMakeLists.txt
ObcProject/Components/LCDMgr/: CMakeLists.txt  LCDMgr.cpp  LCDMgr.fpp  LCDMgr.hpp  LCDPorts.fpp
ObcProject/Components/LCDMgr/docs/: sdd.md
ObcProject/Components/LcdManager/: CMakeLists.txt  LcdManager.cpp  LcdManager.fpp  LcdManager.hpp
ObcProject/Components/LcdManager/docs/: sdd.md
ObcProject/Components/MathReceiver/: CMakeLists.txt  MathReceiver.cpp  MathReceiver.fpp  MathReceiver.hpp  seed-history
ObcProject/Components/MathReceiver/docs/: sdd.md
ObcProject/Components/MathReceiver/test/ut/: MathReceiverTestMain.cpp  MathReceiverTester.cpp  MathReceiverTester.hpp
ObcProject/Components/MathSender/: CMakeLists.txt  MathSender.cpp  MathSender.fpp  MathSender.hpp
ObcProject/Components/MathSender/coverage/: coverage.MathSender.cpp.6b09c207611c5a4cff5562fcd8f78ceb.html  coverage.functions.html  coverage.html  summary.txt
ObcProject/Components/MathSender/docs/: sdd.md
ObcProject/Components/MathSender/test/ut/: MathSenderTestMain.cpp  MathSenderTester.cpp  MathSenderTester.hpp
ObcProject/Components/Orchestrator/: CMakeLists.txt  Orchestrator.cpp  Orchestrator.fpp  Orchestrator.hpp
ObcProject/Components/Orchestrator/docs/: sdd.md
ObcProject/Components/ServoComponent/: CMakeLists.txt  ServoComponent.cpp  ServoComponent.fpp  ServoComponent.hpp
ObcProject/Components/ServoComponent/docs/: sdd.md
ObcProject/ObcRPiIP/: CMakeLists.txt  Main.cpp  README.md
ObcProject/ObcRPiIP/Top/: CMakeLists.txt  ObcRPiIPPackets.fppi  ObcRPiIPTopology.cpp  ObcRPiIPTopology.hpp  ObcRPiIPTopologyDefs.hpp  instances.fpp  topology.fpp
ObcProject/Ports/: CMakeLists.txt  MathPorts.fpp
ObcProject/ServoDeployment/: CMakeLists.txt  Main.cpp  README.md
ObcProject/ServoDeployment/Top/: CMakeLists.txt  ServoDeploymentPackets.fppi  ServoDeploymentTopology.cpp  ServoDeploymentTopology.hpp  ServoDeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
ObcProject/Types/: CMakeLists.txt  LCDTypes.fpp  MathTypes.fpp
cmake/toolchain/: raspberrypi-armv6.cmake
